--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "babel": "^6.5.2",
     "babel-core": "^6.7.4",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-object-rest-spread": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "strip-loader": "^0.1.2",
